welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:9: error: value &&! is not a member of Boolean
  if (estDosMur()&&!porteBiscuit()){
                 ^